# nba-haskell

./: LICENSE  README.md  nba-haskell.cabal
lib/: ParameterTypes.hs  PlayerGameLogParams.hs  ShootingSplitsQueryParameters.hs
src/: Main.hs
