name:                nba-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nba-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              James Santucci
maintainer:          james.santucci@gmail.com
copyright:           2017 James Santucci
category:            Web, NBA
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nba-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , text
                     , nba-haskell

library
  hs-source-dirs:      lib
  exposed-modules:     ParameterTypes
                     , PlayerGameLogParams
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , text

